# outputudy

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  development_plan.md  docker-compose.yml  mise.toml  outputudy.code-workspace
.agent/rules/: rules.md
.github/actions/setup-gcp/: action.yml
.github/workflows/: ci.yml  deploy-docs.yml  deploy.yml  infra.yml
.mise/tasks/: backend-shell  build  down  format  format-backend  format-frontend  lint  lint-backend  lint-frontend  logs  setup  setup-db  setup-env  setup-gcp  setup-hooks  test  test-backend  test-e2e  test-frontend  up
backend/: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prd  Dockerfile.prod  alembic.ini  main.py  mise.toml  pyproject.toml  requirements.txt
backend/.mise/tasks/: format  lint  shell  test
backend/app/: auth.py  main.py
backend/app/core/: config.py  exception_handlers.py  logging.py  middleware.py
backend/app/core/config/: __init__.py  app.py  auth.py  base.py  cors.py  database.py  email.py
backend/app/domain/: email.py  models.py  repository.py
backend/app/infrastructure/: auth_middleware.py  database.py  orm_models.py  security.py
backend/app/infrastructure/email/: console.py  smtp.py  templates.py
backend/app/infrastructure/repository/: sqlalchemy_user_repository.py  user_repository.py
backend/app/infrastructure/repository/sqlalchemy/: user.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 2025_12_31_2242-0517f6051d43_create_users_table_uuid.py  374a3aa5941b_create_users_table.py
backend/app/router/: __init__.py  auth.py  auth_router.py  user.py  user_router.py
backend/app/schemas/: auth.py  system.py  user.py
backend/app/service/: auth.py  auth_service.py  user.py  user_service.py
backend/app/templates/email/: password_reset.html
backend/app/usecase/: user_usecase.py
backend/scripts/: export_openapi.py  seed.py
backend/tests/: conftest.py  test_dummy.py
backend/tests/functional/: test_auth_router.py  test_migrations.py  test_user_router.py
backend/tests/unit/: test_auth_service.py  test_security.py
doc/: .gitignore  Dockerfile  architecture.md  mkdocs.yml  setup_ci.md  setup_workload_identity.md  workflow.md
doc/scripts/: generate_static.py
doc/src/: api.md  api_redoc.md  architecture.md  context.md  index.md  testing.md  workflow.md
frontend/: .gitignore  .prettierignore  Dockerfile  Dockerfile.dev  Dockerfile.prd  Dockerfile.prod  biome.json  eslint.config.mjs  mise.toml  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
frontend/.mise/tasks/: format  lint  test
frontend/e2e/: auth.spec.ts
frontend/src/: auth.config.ts  auth.ts  dummy.test.ts  middleware.ts  proxy.ts  routes.ts
frontend/src/actions/: auth.ts
frontend/src/app/(pages)/: layout.tsx  page.tsx
frontend/src/app/(pages)/(auth)/: layout.tsx
frontend/src/app/home/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/auth/: forgot-password-form.tsx  login-form.test.tsx  login-form.tsx  reset-password-form.tsx  signup-form.test.tsx  signup-form.tsx
frontend/src/components/ui/: button.tsx
frontend/src/config/: site.ts
frontend/src/lib/: api.ts
frontend/src/lib/api-client/: index.ts
frontend/src/providers/: QueryProvider.tsx
frontend/src/test/: setup.ts
frontend/src/types/: next-auth.d.ts  openapi.json
infra/: main.tf  moved.tf  outputs.tf  provider.tf  variables.tf
infra/modules/cloudrun/: main.tf  outputs.tf  variables.tf
infra/modules/database/: main.tf  outputs.tf  variables.tf
infra/modules/iam/: main.tf  outputs.tf  variables.tf
infra/modules/networking/: main.tf  outputs.tf  variables.tf
scripts/: setup.sh  setup_ci.sh
(+18 files in other folders)
